--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 #sonar.projectName=My Test
 sonar.projectKey=github-jenkins-sonar
-sonar.sources=./src
+sonar.sources=.
 
